--- a/src/components/PnLCalendar/index.css
+++ b/src/components/PnLCalendar/index.css
@@ -1,6 +1,7 @@
 .PnLCalendarContainer {
-  padding: 2rem;
+  padding: 1rem;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -32,4 +33,39 @@
 }
 .react-calendar-heatmap .color-low-4 {
   fill: #a70000;
+}
+
+.flex-s-bt {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+.PnLColorRangeContainer {
+  margin-top: -60px;
+}
+.flex {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.colorBoxContainer {
+  list-style: none;
+}
+.colorBox {
+  height: 18px;
+  width: 18px;
+}
+
+@media screen and (max-width: 660px) {
+  .flex-s-bt {
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+  .PnLColorRangeContainer {
+    margin-top: -20px;
+  }
+  .colorBox {
+    height: 10px;
+    width: 10px;
+  }
 }
